@@ -17,6 +17,7 @@ Version 1.4.7 - CVS
     errors from SMTP servers in really long threads (#1167754, #1465342).
   - Undo extra sanitizing in decodeHeader() function (#1460638).
   - Added workaround for broken OpenBSD 3.8+ setlocale() function (#1427512).
+  - Fixed session lockups on large attachment downloads.
 
 Version 1.4.6 - 23 February 2006
 --------------------------------
